tests/baselines/reference/functionReadonlyLength.errors.txt
tests/cases/compiler/functionReadonlyLength.ts(2,4): error TS2540: Cannot assign to 'length' because it is a read-only property.
tests/cases/compiler/functionReadonlyLength.ts(5,4): error TS2540: Cannot assign to 'length' because it is a read-only property.
tests/cases/compiler/functionReadonlyLength.ts(8,4): error TS2540: Cannot assign to 'length' because it is a read-only property.
tests/cases/compiler/functionReadonlyLength.ts(11,4): error TS2540: Cannot assign to 'length' because it is a read-only property.


==== tests/cases/compiler/functionReadonlyLength.ts (4 errors) ====
    const f0 = new Function()
    f0.length = 1;
       ~~~~~~
!!! error TS2540: Cannot assign to 'length' because it is a read-only property.
    
    function f1() {};
    f1.length = 1;
       ~~~~~~
!!! error TS2540: Cannot assign to 'length' because it is a read-only property.
    
    const f2 = function () {};
    f2.length = 1
       ~~~~~~
!!! error TS2540: Cannot assign to 'length' because it is a read-only property.
    
    const f3 = () => {}
    f3.length = 1
       ~~~~~~
!!! error TS2540: Cannot assign to 'length' because it is a read-only property.
    